Styles Fix Attempt 1

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../styles/global.css";
 ---
 <footer class="h-auto w-screen p-4 m-0">
             <ul class="flex gap-9 justify-center">
