--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css";
+
 interface Props{
     videoSRC : string;
 }
@@ -15,4 +17,3 @@ const{videoSRC} = Astro.props;
     </iframe>
     
 </div>
-    
