--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import HMLayout from '../layouts/HomePageLayout.astro';
+import "../styles/global.css";
+
 ---
 
 <HMLayout title="WizK Landing"> 
