--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,5 +1,7 @@
 ---
 import PLayout from '../layouts/PortfolioPageLayout.astro';
+import "../styles/global.css";
+
 ---
 
 <PLayout  title='Portfolio Page'>
