--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -1,6 +1,8 @@
 ---
 import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
+import "../styles/global.css";
+
 
 
 interface Props {
