--- a/src/layouts/PortfolioPageLayout.astro
+++ b/src/layouts/PortfolioPageLayout.astro
@@ -2,6 +2,7 @@
 import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
 import Slider from '../components/Slider.astro';
+import "../styles/global.css";
 
 interface Props {
 	title: string;
