--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 	<body transition:animate="none" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
 		<div class="h-screen max-w-full flex-col">
 			<div class="box-border h-24 w-screen">
-				<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portforlio/' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
+				<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
 			</div>
 			<div class="box-border h-full w-screen sm:h-[75%]">
 				<slot />
