--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import "../styles/global.css";
 <HMLayout title="WizK Landing"> 
     <div class="text-white font-mono m-0 p-4 border-2 rounded-3xl w-2/3 relative top-[15%] left-[17%] sm:top-52 sm:left-16 md:w-3/4  lg:w-6/12">
         <h1 class="text-center sm:text-left text-3xl md:text-4xl lg:text-5xl font-extrabold ">My name is <span class="text-red-500">William!</span></h1 >
-        <h2 class="text-center sm:text-left text-2xl md:text-3xl lg:text-4xl "><span class="type font-extrabold text-yellow-500"></span></h2>
+        <h2 class="text-center sm:text-left text-2xl md:text-3xl lg:text-4xl "><span id="typed-text" class="font-extrabold text-yellow-500 "></span></h2>
         <p class="text-center text-lg md:text-left md:text-xl lg:text-2xl font-normal">I am a high school student who has a passion for <span class="text-yellow-500 font-semibold">technology and computer hardware.</span> 
             I enjoy coming up with <span class="text-red-500 font-semibold">fun ideas</span> that allow me to explore my different interests.
             This is the place where all personal <span class="text-yellow-500 font-semibold">projects and progress </span> will be shared!
@@ -15,9 +15,9 @@ import "../styles/global.css";
     </div >
 </HMLayout>
 
-
-<script type="text/javascript">
-    var Typed = new Typed('.type', {
+<script>
+	import Typed from 'typed.js';
+    const typed = new Typed('#typed-text', {
     strings:["Dreamer", "Innovator", "Team Player"],
     typeSpeed:150,
     backSpeed:150,
