--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -23,15 +23,15 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	</head>
-	<body transition:animate="none" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
-		<div class="h-screen max-w-full flex-col">
+	<body transition:animate="slide" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
+		<div class="h-screen w-screen flex-col">
 			<div class="box-border h-24 w-screen">
 				<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
 			</div>
-			<div class="box-border h-full w-screen sm:h-[75%]">
+			<div class="box-border h-[67%] w-screen">
 				<slot />
 			</div>
-			<div class="relative box-border h-28 w-screen">
+			<div class="relative box-border w-screen">
 				<Footer></Footer>
 			</div>
 		</div>
