--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -2,7 +2,7 @@
 import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
 import "../styles/global.css";
-
+import { ClientRouter } from "astro:transitions";
 
 
 interface Props {
@@ -22,8 +22,9 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+		<ClientRouter/>
 	</head>
-	<body transition:animate="slide" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
+	<body transition:animate="none" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
 		<div class="h-screen w-screen flex-col">
 			<div class="box-border h-24 w-screen">
 				<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
