--- a/src/layouts/PortfolioPageLayout.astro
+++ b/src/layouts/PortfolioPageLayout.astro
@@ -3,6 +3,7 @@ import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
 import Slider from '../components/Slider.astro';
 import "../styles/global.css";
+import { ClientRouter } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -20,6 +21,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+        <ClientRouter/>
 	</head>
 	<body transition:animate="none" class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden">
         <div class="box-border h-24 w-screen">
