--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -8,11 +8,11 @@ interface Props {
 
 const { hrefAM, hrefPF, hrefCM } = Astro.props;
 ---
-<div class=" sm:bg-white backdrop-opacity-15 fixed top-0 right-0 h-screen w-1/6 flex-col items-start justify-start shadow-md shadow-black z-50"> 
+<div> 
 		<nav class=" font-mono p-2 m-0">
-                <ul class="text-start text-3xl m-0 p-5">
+                <ul class="text-start text-3xl m-0 p-5 bg-white backdrop-opacity-15 fixed hidden top-0 right-0 h-screen w-screen flex-col items-start justify-start shadow-md shadow-black z-50 sm:hidden md:hidden lg:hidden">
                     <li>
-                        <button id="closeB" class="transition ease-in-out delay-75 hover:scale-105 hover:text-red-500" type="button"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg> </button>
+                        <button id="closeSideBar" class="transition ease-in-out delay-75 hover:scale-105 hover:text-red-500" type="button"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg> </button>
                     </li>
 					<li class="transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 
 						<a href={hrefAM} data-astro-prefetch="tap">
@@ -32,4 +32,7 @@ const { hrefAM, hrefPF, hrefCM } = Astro.props;
 			</ul>
 		</nav>
 </div>
-	
+
+
+
+
