--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import "../styles/global.css";
 ---
 
 <HMLayout title="WizK Landing"> 
-    <div class="text-white font-mono m-0 p-4 border-2 rounded-3xl w-2/3 relative top-[10%] left-[16%] md:top-[30%] md:left-[5%]">
-        <h1 class="text-center sm:text-left text-3xl md:text-4xl lg:text-5xl font-extrabold ">My name is <span class="text-red-500">William!</span></h1 >
-        <h2 class="text-center sm:text-left text-2xl md:text-3xl lg:text-4xl "><span id="typed-text" class="font-extrabold text-yellow-500 "></span></h2>
+    <div class="text-white font-mono m-0 p-4 border-2 rounded-3xl w-2/3 relative top-[10%] left-[16%] md:top-[30%] md:left-[5%] ">
+        <h1 class="text-center sm:text-center text-3xl md:text-4xl md:text-left lg:text-5xl font-extrabold ">My name is <span class="text-red-500">William!</span></h1 >
+        <h2 class="text-center md:text-left text-2xl md:text-3xl lg:text-4xl "><span id="typed-text" class="font-extrabold text-yellow-500 "></span></h2>
         <p class="text-center text-md md:text-left md:text-xl lg:text-xl font-normal">I am a high school student who has a passion for <span class="text-yellow-500 font-semibold">technology and computer hardware.</span> 
             I enjoy coming up with <span class="text-red-500 font-semibold">fun ideas</span> that allow me to explore my different interests.
             This is the place where all personal <span class="text-yellow-500 font-semibold">projects and progress </span> will be shared!
@@ -29,16 +29,3 @@ import "../styles/global.css";
 	
 </script>
 
-<script is:inline type="text/javascript">
-	document.addEventListener("DOMContentLoaded", () => {
-	const sideBar = document.getElementById("sideBar-toggle")
-	const close = document.getElementById("closeB");
-	const open = document.getElementById("openB");
-	const toggleSideBar = (show) => {sideBar.style.display = show ? "flex" : "none";
-	}
-
-	close.addEventListener("click", ()=> toggleSideBar(false));
-	open.addEventListener("click", ()=> toggleSideBar(true));
-	})
-	
-</script>
