--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -25,48 +25,45 @@ const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 				<li class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-105 hidden sm:flex"> 
 					<a href={hrefCM} >Contact</a>
 				</li>
-				<li class="flex sm:hidden">
-					<button id="openSidebar">
-						testing
+				<li id="openSidebar" class="flex sm:hidden">
+					<button class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-125" >
+						<svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
 					</button>
 				</li>
 			</ul>
 		</nav>
-		<nav id="sideBar" class=" font-mono p-2 m-0" style="display: none;">
-                <ul class="text-start text-3xl m-0 p-5 bg-white backdrop-opacity-15 fixed top-0 right-0 h-screen w-screen flex-col items-start justify-start shadow-md shadow-black z-99 sm:hidden md:hidden lg:hidden">
+		<nav id="sideBar" class="font-mono p-2 m-0" style="display: none;">
+                <ul class="text-3xl m-0 p-5 bg-white backdrop-opacity-15 fixed top-0 right-0 h-screen w-screen flex-col items-start justify-start shadow-md shadow-black z-50 sm:hidden md:hidden lg:hidden">
                     <li>
-                        <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-105 hover:text-red-500" type="button"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg> </button>
+                        <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-125 hover:text-red-500" type="button"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg> </button>
                     </li>
-					<li class="transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 
+					<li class="text-center transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 
 						<a href={hrefAM} data-astro-prefetch="tap">
 							About Me
 						</a>
 					</li>
-					<li class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
+					<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
 						<a href={hrefPF} data-astro-prefetch>
 							Portfolio
 						</a>
 					</li>
-					<li class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
+					<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
 						<a href={hrefCM} data-astro-prefetch="tap">
 							Contact
 						</a>
 					</li>
 			</ul>
 		</nav>
-<!-- -->
 	<script>
-		document.addEventListener("astro:page-load", ()=>{
-			document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('astro:page-load', (event)=>{
 			const sidebar = document.getElementById("sideBar");
 			const openButton = document.getElementById("openSidebar");
 			const closeButton = document.getElementById("closeSidebar");
-			const toggleSidebar = (show: boolean) => {
+			const toggleSidebar = (show:boolean) => {
 				sidebar!.style.display = show ? "flex" : "none";
 			};
 			openButton!.addEventListener("click", () => toggleSidebar(true));
 			closeButton!.addEventListener("click", () => toggleSidebar(false));
-		});
-		})
+		});		
 	</script>
 		
