--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -9,7 +9,7 @@ interface Props {
 
 const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 ---
-		<nav class="fixed bg-white w-screen font-mono sm:p-2 m-0 h-24 flex items-center z-50">
+		<nav class="bg-white w-screen font-mono sm:p-2 m-0 h-24 flex items-center z-50">
 			<div class="flex items-center">
 				<span class="transition ease-in-out delay-75 hover:scale-110 text-bold text-transparent bg-clip-text bg-gradient-to-r from-red-800 via-red-500 to-yellow-500 inline-block justify-start pl-10 text-5xl sm:text-6xl">
 					{webTitle}
@@ -25,17 +25,19 @@ const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 				<li class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-105 hidden sm:flex"> 
 					<a href={hrefCM} >Contact</a>
 				</li>
-				<li id="openSidebar" class="flex sm:hidden">
-					<button class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-125" >
+				<li class="transition ease-in-out delay-75 hover:text-red-500 hover:scale-125 flex sm:hidden">
+					<button id="openSidebar">
 						<svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
 					</button>
 				</li>
 			</ul>
 		</nav>
-		<nav id="sideBar" class="font-mono p-2 m-0" style="display: none;">
-                <ul class="text-3xl m-0 p-5 bg-white backdrop-opacity-15 fixed top-0 right-0 h-screen w-screen flex-col items-start justify-start shadow-md shadow-black z-50 sm:hidden md:hidden lg:hidden">
+			<div id="sideBar" class=" hidden font-mono p-2 m-0 fixed top-0 opacity-100 bg-white h-screen w-screen z-50">
+				<ul class="text-3xl m-0 p-5 ">
                     <li>
-                        <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-125 hover:text-red-500" type="button"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg> </button>
+                        <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-125 hover:text-red-500" type="button">
+							<svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+						</button>
                     </li>
 					<li class="text-center transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 
 						<a href={hrefAM} data-astro-prefetch="tap">
@@ -52,18 +54,20 @@ const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 							Contact
 						</a>
 					</li>
-			</ul>
-		</nav>
+				</ul>
+			</div>
+		
+		
 	<script>
 		document.addEventListener('astro:page-load', (event)=>{
-			const sidebar = document.getElementById("sideBar");
-			const openButton = document.getElementById("openSidebar");
-			const closeButton = document.getElementById("closeSidebar");
-			const toggleSidebar = (show:boolean) => {
-				sidebar!.style.display = show ? "flex" : "none";
-			};
-			openButton!.addEventListener("click", () => toggleSidebar(true));
-			closeButton!.addEventListener("click", () => toggleSidebar(false));
+			const openButton = document.getElementById("openSidebar")?.addEventListener("click", ()=>{
+				document.getElementById("sideBar")?.classList.remove("hidden");
+			});
+			const closeButton = document.getElementById("closeSidebar")?.addEventListener("click", ()=>{
+				document.getElementById("sideBar")?.classList.add("hidden");
+			}
+			);
+			
 		});		
 	</script>
 		
