--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -32,30 +32,29 @@ const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 				</li>
 			</ul>
 		</nav>
-			<div id="sideBar" class=" hidden font-mono p-2 m-0 fixed top-0 opacity-100 bg-white h-screen w-screen z-50">
-				<ul class="text-3xl m-0 p-5 ">
-                    <li>
-                        <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-125 hover:text-red-500" type="button">
-							<svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-						</button>
-                    </li>
-					<li class="text-center transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 
-						<a href={hrefAM} data-astro-prefetch="tap">
-							About Me
-						</a>
-					</li>
-					<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
-						<a href={hrefPF} data-astro-prefetch>
-							Portfolio
-						</a>
-					</li>
-					<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
-						<a href={hrefCM} data-astro-prefetch="tap">
-							Contact
-						</a>
-					</li>
-				</ul>
-			</div>
+		<nav id="sideBar" class=" hidden font-mono p-2 m-0 fixed top-0 opacity-100 bg-white h-screen w-screen z-50">			
+			<ul class="text-3xl m-0 p-10 ">
+                <li>
+                    <button id="closeSidebar" class="transition ease-in-out delay-75 hover:scale-125 hover:text-red-500" type="button">
+						<svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+					</button>
+                </li>
+				<li class="text-center transition ease-in-out delay-75 hover:scale-105 hover:text-red-500"> 						<a href={hrefAM} data-astro-prefetch="tap">
+					About Me
+					</a>
+				</li>
+				<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
+					<a href={hrefPF} data-astro-prefetch>
+						Portfolio
+					</a>
+				</li>
+				<li class="text-center transition ease-in-out delay-75 hover:text-red-500 hover:scale-105"> 
+					<a href={hrefCM} data-astro-prefetch="tap">
+						Contact
+					</a>
+				</li>
+			</ul>
+		</nav>
 		
 		
 	<script>
