--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 		<ClientRouter/>
 	</head>
-	<body transition:animate={fade({duration: "0.9s"})}  class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
+	<body transition:animate={fade({duration: "0.9s"})}  class="bg-fixed bg-black bg-no-repeat bg-cover overflow-hidden sm:overflow-hidden" style="background-image:url(/webimg2.jpg);">
 		<div transition:animate="none" class="box-border h-24 w-screen z-50">
 			<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
 		</div>
