--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -18,7 +18,7 @@ const{VidLink, header} = Astro.props;
         allowfullscreen>
         </iframe>
         <h1 class="font-mono text-center font-bold text-md sm:text-2xl">{header}</h1>
-        <p class="font-mono text-center text-[80%] m-0 p-1"><slot /></p>
+        <p class="font-mono text-center text-[80%] m-0 p-1 lg:font-bold text-[100%] p-2"><slot /></p>
     </div>
        
 </div>
