--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -2,7 +2,7 @@
 import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
 import "../styles/global.css";
-import { ClientRouter } from "astro:transitions";
+import { ClientRouter, slide } from "astro:transitions";
 import { fade } from 'astro:transitions';
 
 
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="WiZK About Me" />
-		<meta name="viewport" content="width=device-width, intial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
