--- a/src/layouts/PortfolioPageLayout.astro
+++ b/src/layouts/PortfolioPageLayout.astro
@@ -3,7 +3,7 @@ import HMHeader from '../components/NavBar.astro';
 import Footer from '../components/Footer.astro';
 import Slider from '../components/Slider.astro';
 import "../styles/global.css";
-import { ClientRouter } from "astro:transitions";
+import { ClientRouter, slide } from "astro:transitions";
 import { fade } from 'astro:transitions';
 interface Props {
 	title: string;
@@ -23,7 +23,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
         <ClientRouter/>
 	</head>
-	<body transition:animate={fade({duration: "0.9s"})} class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden">
+	<body transition:animate={fade({duration: "1.0s"})} class="bg-fixed bg-black bg-no-repeat bg-cover overflow-x-hidden">
         <div transition:animate="none" class="box-border h-24 w-screen">
             <HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
         </div>
