Fixing Mobile Styles

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -18,7 +18,7 @@ const{VidLink, header} = Astro.props;
         allowfullscreen>
         </iframe>
         <h1 class="font-mono text-center font-bold text-md sm:text-2xl">{header}</h1>
-        <p class="font-mono text-center text-[90%] p-2 m-0 md:font-bold lg:font-bold"><slot /></p>
+        <p class="font-mono text-center text-sm text-[80%] p-2 m-0 md:font-bold lg:font-bold"><slot /></p>
     </div>
        
 </div>
