--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -11,7 +11,7 @@ const { webTitle, hrefAM, hrefPF, hrefCM } = Astro.props;
 ---
 		<nav class=" bg-white w-screen font-mono sm:p-2 m-0 h-24 flex items-center z-50 shadow-md">
 			<div class="flex items-center">
-				<span class="transition ease-in-out delay-75 hover:scale-110 text-bold text-transparent bg-clip-text bg-gradient-to-r from-red-800 via-red-500 to-yellow-500 inline-block justify-start pl-10 text-5xl sm:text-6xl">
+				<span class="transition ease-in-out delay-75 hover:scale-110 text-bold text-transparent bg-clip-text bg-linear-to-r from-red-800 via-red-500 to-yellow-500 inline-block justify-start pl-10 text-5xl sm:text-6xl">
 					{webTitle}
 				</span>
 			</div>
