--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -12,8 +12,10 @@ const{VidLink, header} = Astro.props;
         <iframe 
         width="100%" height="100%" 
         src={VidLink} 
+        loading="lazy"
+        fetchpriority="high"
         title="YouTube video player"  
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen>
         </iframe>
