--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,11 @@ import "../styles/global.css";
 
 <HMLayout title="WizK Landing"> 
     <div class="text-white font-mono m-0 p-4 border-2 rounded-3xl w-2/3 h-fit">
-        <h1 class="text-center sm:text-center text-3xl md:text-4xl md:text-left lg:text-5xl font-extrabold">My name is <span class="text-red-500">William!</span></h1 >
+        <h1 class="text-center sm:text-center text-3xl md:text-4xl md:text-left lg:text-5xl font-extrabold">My name is <span class="text-yellow-300">William!</span></h1 >
         <h2 class="text-center md:text-left text-2xl md:text-3xl lg:text-4xl "><span id="typed-text" class="font-extrabold text-yellow-500 "></span></h2>
-        <p class="text-center text-md md:text-left md:text-xl lg:text-xl font-normal">I am a Computer Engineering undergraduate at the <span class="text-yellow-300 font-semibold">University of Waterloo</span> who is interested in <span class="text-red-500 font-semibold">Computer Hardware and Software.</span> 
+        <p class="text-center text-md md:text-left md:text-xl lg:text-xl font-normal">I am a Computer Engineering undergraduate at the <span class="text-yellow-300 font-semibold">University of Waterloo</span> who is interested in <span class="text-yellow-300 font-semibold">Computer Hardware and Software.</span> 
             I enjoy coming up with <span class="text-yellow-300 font-semibold">fun ideas</span> that explores my different interests.
-            This is the place where all <span class="text-red-500 font-semibold">progress</span> will be shared!
+            This is the place where all progress will be shared!
         </p>
     </div >
 </HMLayout>
@@ -19,7 +19,7 @@ import "../styles/global.css";
     import Typed from 'typed.js';
     document.addEventListener("astro:page-load", (event) => {
         const typed = new Typed('#typed-text', {
-            strings:["Dreamer", "Innovator", "Team Player"],
+            strings:["Dreamer", "Problem Solver", "Team Player"],
             typeSpeed:150,
             backSpeed:150,
             backDelay:1000,
