--- a/src/layouts/PortfolioPageLayout.astro
+++ b/src/layouts/PortfolioPageLayout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
         <div transition:animate="none" class="box-border h-24 w-screen">
             <HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
         </div>
-        <div class="h-[calc(100vh-5rem)] overflow-auto overscroll-none">
+        <div class="h-[calc(100dvh-6rem)] overflow-auto overscroll-none">
             <div>
                  <h1 class="text-white text-center p-5 m-0 text-7xl font-mono">Projects</h1>
             </div>
