Style changes to text box and footer on the homepage

--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -30,10 +30,10 @@ const { title } = Astro.props;
 			<HMHeader webTitle='WIZK' hrefAM='/' hrefPF='/portfolio' hrefCM='mailto:wizktec@gmail.com'></HMHeader>
 		</div>
 		<div class="h-[calc(100dvh-6rem)] flex-col overflow-auto overscroll-none">
-			<div class="py-3.5 box-border h-full w-full flex flex-wrap justify-center items-center">
+			<div class="top-10 p-7 box-border h-full w-full flex flex-wrap justify-center items-center">
 				<slot />
 				
-				<div class="relative">
+				<div class="relative top-7">
 					<Footer></Footer>
 				</div>
 				
